css/homepage.css
nav > a {
    opacity: 0;
}

@keyframes sky-light-up {
    0% {
        background-color: #141e2b;
    }
    100% {
        background-color: #253551;
    }
}

.cover {
    flex-direction: row;
    align-items: center;
    position: relative;
    overflow: hidden;
    animation: sky-light-up 3s ease-out 0.5s;
    animation-fill-mode: both;
}

@keyframes appear {
    from {
        opacity: 0;
    }
    to {
        opacity: 1;
    }
}

.description-wrapper {
    display: flex;
    flex-direction: column;
    position: relative;
    color: aliceblue;
    max-width: 45%;
    height: fit-content;
    z-index: 1;
    font-weight: 500;
    animation: appear 2s ease-out .5s;
    animation-fill-mode: both;
}

nav {
    animation: appear 2s ease-out .5s;
    animation-fill-mode: both;
}

.name-title {
    font-size: 70px;
    margin: 20px 0;
}


.cover-image-wrapper {
    background-image:url(../assets/main/logo.png);
    background-size: contain;
    background-repeat: no-repeat;
    display: inline-block;
    height: 40vmin;
    width: 40vmin;
    position: absolute;
    right: 10vw;
    bottom: 18vh;
    z-index: 0;
    animation: appear 4s ease-in-out;
    animation-fill-mode: both;
}

.spacer {
    position: absolute;
    bottom: 0;
    z-index: 9;
    aspect-ratio: 960/100;
    width: 100%;
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
    background-image: url("../assets/wave.svg");
}

.spacer-bottom {
    aspect-ratio: 960/50;
    width: 100%;
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
    background-image: url("../assets/wave2.svg");
    border: 0;
}


.wave-wrapper {
    position: absolute;
    bottom: 0;
    left: -10px;
    z-index: 9;
    width: 110%;
    object-fit: cover;
    margin-bottom: -10px;
    border: 0;
}

svg {
    object-fit: cover;
    width: 100%;
    height: auto;
}

#w21, #w22, #w23, #w24, #w25 {
    display: none;
}

.product-wrapper {
    display: flex;
    flex-direction: row-reverse;
}

.factory > .product-wrapper {
    flex-direction: row;
}

.title-wrapper {
    display: flex;
    flex-direction: row;
    align-items: center;
    width: fit-content;
    position: relative;
}


.title-decoration {
    font-size: 1.85em;
    margin: 1.5vw;
    transform: scale(1,1.24);
}

.star-align {
    right: calc(1.5em + 1.5vw);
}


.product-text {
    display: flex;
    flex-direction: column;
    max-width: 50%;
    place-content: center;
}

.product-text > .title-wrapper > h2 {
    display: flex;
    padding-bottom: 5px;
    border-bottom: 2px solid #253551;
    color:#253551;
    width: fit-content;
    transition: all .3s ease-out;
}

.product-text > .title-wrapper > h2:hover {
    background-color: #253551;
    color: rgb(255, 255, 255);
    border-radius: 2px;
    padding: 3px;
}


.product-description {
    font-weight: 600;
}

/* margin and size of the product picture*/
.product-image-wrapper {
    margin-right: auto;
    max-width: 45%;
}

.factory > .product-wrapper > .product-image-wrapper {
    margin-right: 0;
    margin-left: auto;
}

main {
    position: relative;
    overflow:hidden;
}

.gray-circle {
    height: 40vw;
    width: 40vw;
    border-radius: 50%;
    background-color: #aaaaaa;

    position: absolute;
    bottom: -22vw;
    left: 3vw;

    z-index: -1;
}

/*---------------------------------------*/


@media (max-width: 820px) {
    .product-wrapper {
        flex-direction: column;
        place-content: center;
        place-items: center;
    }
    .factory > .product-wrapper {
        flex-direction: column;
    }
    .pet, .factory, .asphalt {
        padding: 0;
    }
    .product-text {
        max-width: 80%;
    }
    .product-image-wrapper {
        min-width: 80%;
        margin: 20px 0 0 0;
    }
    /*have to specifiy (specificity problem)*/
    .factory > .product-wrapper > .product-image-wrapper {
        margin-right: 0;
    }
    .name-title {
        font-size: 60px;
        margin: 15px 0;
    }
}


@media (max-width: 400px) {
    .name-title {
        margin: 10px 0;
    }
    .cover-image-wrapper {
        display: none;
    }
}

